# timer-lean

./: .envrc  .gitignore  Cargo.toml  FFI.lean  LICENSE  Main.lean  PKGBUILD  README.md  Sand.lean  SandClient.lean  SandDaemon.lean  Timer.lean  TimerClient.lean  TimerDaemon.lean  create_release.sh  create_release_archive.sh  dev_daemon.py  flake.nix  install.sh  justfile  lake-manifest.json  lakefile.lean  lakefile.toml  quickinstall.sh  test.py  test_daemon.py
.github/workflows/: ci.yml
FFI/: Terminal.lean
Sand/: Basic.lean
Timer/: Basic.lean
resources/: timer_sound.opus
resources/systemd/: sand.service  sand.socket
scripts/: install.sh  install_release.sh
src/: Client.lean  Daemon.lean  Main.lean  Sand.lean  SandClient.lean  cli.rs  client.rs  daemon.rs  main.rs  sand.rs
src/Client/: CLI.lean
src/Daemon/: Basic.lean  HandleCommand.lean
src/Sand/: Basic.lean  Message.lean  SandClient.lean  SandDaemon.lean  Time.lean  Timers.lean
src/Sand/SandDaemon/: HandleCommand.lean
src/daemon/: ctx.rs  handle_client.rs  state.rs
src/sand/: audio.rs  cli.rs  duration.rs  message.rs  timer.rs  timers.rs
systemd/: install.sh  sandd.service  sandd.socket  timerd.service  timerd.socket
