[package]
name = "sand"
version = "0.1.0"
edition = "2021"

[dependencies]
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
clap = { version = "4.5.13", features = ["derive"] }
dashmap = "6.0.1"
derive_more = "0.99.18"
dirs = "5.0.1"
notify-rust = "4.11.1"
rodio = "0.19.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
